--- a/src/view/FrameLogin.form
+++ b/src/view/FrameLogin.form
@@ -48,7 +48,7 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBoxDatabase" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jLabelLogo" alignment="0" max="32767" attributes="0"/>
                   <Component id="jButtonConnection" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -59,7 +59,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <Component id="jLabelLogo" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabelLogin" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -121,7 +121,7 @@
           <Connection code="m_connectionModel.getDatabaseModel()" type="code"/>
         </Property>
         <Property name="editor" type="javax.swing.ComboBoxEditor" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new editor.ComboBoxDatabaseEditor()" type="code"/>
+          <Connection code="new editor.ComboBoxDatabaseEditor(m_connectionModel.getSelectedDatabase())" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -136,7 +136,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConnectionActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="jLabelLogo">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
